fixed contrast issue for accessibility (black font for the selected filter)

--- a/assets/style.css
+++ b/assets/style.css
@@ -104,9 +104,10 @@ body {
 	cursor: default;
 }
 .nav-pills .nav-link.active-tag, .nav-pills .show > .nav-link {
-	color: #fff;
+	color: #000;
 	background-color: #BEB45A;
 	border-radius:0 ;
+	font-weight: bold;
 }
 .nav-pills .nav-link {
 	color: #000
